--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http_interceptor: ^1.0.2
   provider: ^6.0.4
+  flutter_spinkit: ^5.1.0
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
